--- a/Assets/responsive.css
+++ b/Assets/responsive.css
@@ -32,6 +32,7 @@
 
     .nav-panel .row {
         margin-top: 1em;
+        padding-top: 1em;
     }
 
     .nav-panel .row .col {
@@ -40,7 +41,7 @@
     }
 
     .nav-panel .row .col h1 {
-        font-size: 1.5em;
+        font-size: 1.2em;
     }
 
     .nav-panel .row .col .drop div {
@@ -79,6 +80,7 @@
         height: 100vh;
         background-color: rgb(218, 223, 225);
         display: block;
+        z-index: 5;
 
     }
 
@@ -135,6 +137,11 @@
         outline: none;
     }
 
+    /*Main Section*/
+    .container-fluid{
+        width: 85vw;
+    }
+
     /*Banner Styling*/
     .banner{
         display: none;
@@ -143,6 +150,23 @@
     .banner-small{
         display: block;
     }
+
+    .banner-small ul{
+        margin: 0;
+        padding-top: 3em;
+        padding-right: 3em;
+        color: #b0b0b0;
+        list-style-type: none;
+
+    }
+
+    .banner-small ul li{
+        font-size: 1.5em;
+        padding-top: 2em;
+        font-family: 'Bad Script', cursive;
+        font-weight: lighter;
+    }
+
 
     /*About Us Section*/
     .about {
@@ -153,12 +177,12 @@
     .about h1 {
         padding: 0 3.2em 0 1em;
         font-family: 'Bad Script', cursive;
-        font-size: 2em;
+        font-size: 1.5em;
     }
 
     .about p {
         padding: 0 8em 0 3em;
-        font-size: .9em;
+        font-size: .75em;
         letter-spacing: .1em;
         margin-bottom: 0;
 
@@ -177,16 +201,16 @@
     .life-style .head h1 {
         margin-top: 2em;
         line-height: .1em;
-        padding-left: 2em;
+        padding-left: 1em;
         padding-right: 2.5em;
         font-family: 'Quicksand', sans-serif;
         cursor: default;
-        font-size: 2em;
+        font-size: 1.5em;
     }
 
     .life-style .head hr {
-        width: 16em;
-        margin-left: 5em;
+        width: 12em;
+        margin-left: 3em;
         margin-top: 2em;
         margin-bottom: 3em;
 
@@ -210,6 +234,154 @@
         height: inherit;
     }
 
+    /*Overhead Panel Section*/
+
+    .content .row .content-panel {
+        width: 85vw;
+        height: 22em;
+        background-color: rgb(210, 215, 211);
+        position: absolute;
+        transition: ease-in-out .5s;
+        display: block;
+
+
+
+    }
+
+    .content .row .content-panel .row-1 {
+        margin-top: 1em;
+        width: 100%;
+        height: 1em;
+        margin-bottom: 0;
+
+    }
+
+    .content .row .content-panel .row-1 .col {
+        padding: 0 2em;
+        width: 50%;
+
+    }
+
+    .content .row .content-panel .row-1 .col h1 {
+        padding-top: 1em;
+        font-weight: lighter;
+        font-family: 'Quicksand', sans-serif;
+        display: inline;
+        font-size: 1.2em;
+
+    }
+
+    .content .row .content-panel .row-1 .col .drop {
+        display: inline;
+        position: absolute;
+        right: 3em;
+        transform: translateY(-1em);
+    }
+
+    .content .row .content-panel .row-1 .col .drop div {
+        height: .05em;
+        width: 1em;
+        background-color: black;
+        transition: ease-in-out .5s;
+    }
+
+    .content .row .content-panel .row-1 .col .drop .line-1 {
+        transform: rotate(45deg);
+    }
+
+    .content .row .content-panel .row-1 .col .drop .line-2 {
+        transform: rotate(-45deg);
+    }
+
+    .content .row .content-panel .row-1 .col a:hover .line-1 {
+        transform: rotate(0deg);
+    }
+
+    .content .row .content-panel .row-1 .col a:hover .line-2 {
+        transform: rotate(0deg);
+    }
+
+    .content .row .content-panel .row-2 {
+        margin-top: 2em;
+        width: 100%;
+        height: 4em;
+        margin-bottom: 0;
+
+    }
+
+    .content .row .content-panel .row-2 .col-2 {
+        width: 30%;
+        float: left;
+        display: none;
+    }
+
+    .content .row .content-panel .row-2 .col-2 .row p {
+        padding: 0 .5em;
+        font-size: 1.4em;
+    }
+
+    .content .row .content-panel .row-2 .col-10 {
+        display: block;
+        width: 100%;
+
+    }
+
+    .content .row .content-panel .row-2 .col-10 .row {
+        display: inline;
+        float: left;
+        width: 33%;
+
+    }
+
+    .content .row .content-panel .row-2 .col-10 .row .col {
+        width: 6em;
+        height: 5em;
+        margin: 0;
+        padding: 0;
+    }
+
+    .content .row .content-panel .row-2 .col-10 .row .col img {
+        width: 6em;
+        height: 5em;
+        margin: 0;
+        padding: 0;
+        position: absolute;
+        z-index: 1;
+        opacity: .5;
+    }
+
+    .content .row .content-panel .row-2 .col-10 .row .col .sub-content {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        margin: 0;
+        padding: 0;
+        transition: ease-in-out .5s;
+        z-index: 4;
+    }
+
+    .content .row .content-panel .row-2 .col-10 .row .col .sub-content h3 {
+        padding-top: 1em;
+        padding-left: .5em;
+        transition: ease-in-out .5s;
+    }
+
+    .content .row .content-panel .row-2 .col-10 .row .col .sub-content h3 a {
+        text-decoration: none;
+        color: rgb(46, 49, 49);
+        transition: ease-in-out .5s;
+
+    }
+
+    .content .row .content-panel .row-2 .col-10 .row .col .sub-content:hover {
+        background-color: transparent;
+    }
+
+    .content .row .content-panel .row-2 .col-10 .row .col .sub-content:hover h3 a {
+        color: inherit;
+    }
+
+
     /*Card Section*/
 
     .content .row .col .card {
@@ -220,7 +392,7 @@
 
     .content .row .col .card .card-img img {
         width: 100%;
-        height: 40vh;
+        height: 35vh;
     }
 
     .content .row .col .card .card-content {
@@ -231,7 +403,7 @@
 
     .content .row .col .card .card-content hr {
         margin-left: 2em;
-        width: 16em;
+        width: 12em;
     }
 
     .content .row .col .card .card-content:hover {
@@ -241,12 +413,12 @@
 
     .content .row .col .card .card-content:hover hr {
         margin-left: 2em;
-        width: 16em;
+        width: 12em;
         transform: translateX(0);
     }
 
     .content .row .col .card .card-content h2 {
-        font-size: 1.5em;
+        font-size: 1.2em;
     }
 
     .content .row .col .card .card-content p {
@@ -304,6 +476,19 @@
         padding: .6em 4em .6em 4em;
         color: rgb(108, 122, 137);
         border: .1em solid rgb(108, 122, 137);
+    }
+
+    /*Footer Section*/
+    footer h3 {
+        padding-top: 1em;
+        line-height: .1em;
+        font-weight: lighter;
+        font-size: .9em;
+    }
+
+    footer a {
+        text-decoration: none;
+        color: #586776;
     }
 
 }
