--- a/Assets/style.css
+++ b/Assets/style.css
@@ -593,7 +593,7 @@ nav button {
 .glossary {
     width: 100%;
     height: 24em;
-    background: url("Glossary.png") fixed no-repeat;
+    background: url("Glossary.png") fixed center no-repeat;
     background-size: cover;
 
 }
@@ -654,7 +654,7 @@ footer {
     text-align: right;
     line-height: .5em;
     font-size: .7em;
-    padding-right: 12em;
+    padding-right: 2em;
     background: linear-gradient(to bottom, #fff, #ebf1f3, #DAE0E2, #DAE0E2, #A4B0BD);
     height: 5em;
     margin: 0;
