--- a/Assets/style.css
+++ b/Assets/style.css
@@ -16,61 +16,6 @@ body {
 }
 
 /*Beginning Animation*/
-.beg-animation {
-    width: 100vw;
-    height: 100vh;
-    z-index: 10;
-    position: relative;
-    font-family: 'Josefin Sans', sans-serif;
-    display: none;
-}
-
-.beg-animation #GC-1 {
-    position: absolute;
-    color: red;
-    font-weight: bolder;
-    font-family: 'Josefin Sans', sans-serif;
-    text-align: center;
-    font-size: 5em;
-    top: 50%;
-    margin-top: -2.5%;
-    left: 50%;
-    margin-left: -2.5em;
-}
-.beg-animation #GC-2 {
-    position: absolute;
-    color: orange;
-    font-weight: bolder;
-    font-family: 'Josefin Sans', sans-serif;
-    text-align: center;
-    font-size: 5em;
-    top: 50%;
-    margin-top: -2.5%;
-    left: 50%;
-    margin-left: -2.5em;
-}
-.beg-animation #GC-3 {
-    position: absolute;
-    color: orangered;
-    font-weight: bolder;
-    font-family: 'Josefin Sans', sans-serif;
-    text-align: center;
-    font-size: 5em;
-    top: 50%;
-    margin-top: -2.5%;
-    left: 50%;
-    margin-left: -2.5em;
-}
-
-.beg-animation #GC-4{
-    position: absolute;
-    width: 30em;
-    height: 15em;
-    top: 50%;
-    margin-top: -7.5em;
-    left: 50%;
-    margin-left: -15em;
-}
 
 /*Navigation Panel Section*/
 .nav-panel {
@@ -161,7 +106,6 @@ nav {
     width: 5em;
     height: 36em;
     background-color: rgba(218, 223, 225, .7);
-    display: none;
     z-index: 5;
 
 }
@@ -187,12 +131,12 @@ nav .burger .line {
 }
 
 nav .burger:hover #line4 {
-    transform: rotate(45deg) translate(.4em, 1.2em);
+    transform: rotate(45deg) translate(.4em, .7em);
     width: 1em;
 }
 
 nav .burger:hover #line6 {
-    transform: rotate(-45deg) translate(.4em, -1.2em);
+    transform: rotate(-45deg) translate(.4em, -.7em);
     width: 1em;
 }
 
@@ -257,7 +201,7 @@ nav button {
     background: url("banner-1-o.jpg") center no-repeat;
     background-size: cover;
     width: 100%;
-    height: 95vh;
+    height: 100vh;
     z-index: 1;
 }
 
@@ -589,7 +533,13 @@ nav button {
 .content .row .col .card .card-img img {
     width: 100%;
     height: 28em;
+    transition: ease-in-out .5s;
 }
+/*.content .row .col .card .card-img img:hover {*/
+    /*width: 105%;*/
+    /*transform: translateX(-2em);*/
+/*}*/
+
 
 .content .row .col .card .card-content {
     padding: 1em 5em 1em 5em;
